Many improvements to the front page

--- a/Grow.Server/Styles/libs/_vars.scss
+++ b/Grow.Server/Styles/libs/_vars.scss
@@ -67,6 +67,11 @@
 			fg:			#fff
 		),
 
+        disabled: (
+            fg: #898786,
+            bg: #645862
+        ),
+
 		navPanel: (
 			bg:			#1c2021,
 			fg:			#fff
