--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -1,60 +1,125 @@
-﻿@model ICollection<Grow.Data.Entities.Partner>
+﻿@model Grow.Server.Model.ViewModels.IndexViewModel
 
 @{
     ViewBag.Title = "Welcome to GROW";
     ViewBag.TransparentNavbar = true;
+
+    var contestStart = Model.MainEvents.Min(e => e.Start);
+    var timeLeft = contestStart - DateTime.Now;
+    var isBeforeContest = contestStart > DateTime.Now;
 }
 
 <section id="banner">
     <div class="inner">
-
         <header>
-            <h2><img src="/img/grow_logo.png" alt="GROW" width="400px" /></h2>
+            <h2><img src="/img/grow_logo.png" alt="GROW" style="width: 350px" /></h2>
         </header>
-
     </div>
-    <div style="display: block; margin-top: 30px;">
-        <p>
-            Made with ❤ by<br />
-            <img src="/img/pg_logo.png" alt="PionierGarage" width="200px" />
-        </p>
-    </div>
+    <p>&nbsp;</p>
+    @if (isBeforeContest)
+    {
+        // countdown
+        <h2>
+            GROW @Model.Contest.Year starting soon<br />
+            <span style="font-family: 'Space Mono'; font-weight: bold; font-size: 200%">
+                <span id="countdown-days">@timeLeft.Days</span> :
+                <span id="countdown-hours">@timeLeft.Hours</span> :
+                <span id="countdown-mins">@timeLeft.Minutes</span> :
+                <span id="countdown-secs">@timeLeft.Seconds</span>
+            </span>
+        </h2>
+    }
+    else
+    {
+        <h2>Support student entrepreneurship</h2>
+    }
+    <p>&nbsp;</p>
+    <ul class="buttons">
+        <li><a href="#cta" class="button special">Get involved</a></li>
+    </ul>
 </section>
 
 <article id="main">
     <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
         <header>
+            @if (isBeforeContest)
+            {
+                <h2 style="text-align: center">Stay tuned for @Model.Contest.Name</h2>
+            }
+            else
+            {
+                <h2>@Model.Contest.Name</h2>
+            }
             <p style="font-weight: 500;">
                 Become an entrepreneur and advance your idea over 11 weeks. Get support, build your prototype and test your market.
             </p>
         </header>
         <p>
-            GROW, the student founding contest in Karlsruhe, is aimed at helping student entrepreneurs to get the right experience, knowledge and network to found their own company. There are no requirements; some teams start with nothing but an idea and others are already working on their prototype. We value progress; it doesn’t matter where you start, as long as you GROW.
+            GROW, the student founding contest in Karlsruhe, is aimed at helping student entrepreneurs to get the right experience, 
+            knowledge and network to found their own company. There are no requirements; some teams start with nothing but an idea and others are already working on their prototype. We value progress; it doesn’t matter where you start, as long as you GROW.
         </p>
         <p>
-            At the end you can get the chance to pitch your progress in front of <strong>500 people</strong> including an experienced jury and may win one of the prizes from our <strong>prize pool worth 7500 €</strong>.
+            At the end you can get the chance to pitch your progress in front of <strong>500+ people</strong> 
+            including an experienced jury and may win one of the prizes from our <strong>prize pool worth over 10.000 €</strong>.
         </p>
     </section>
 
     <section id="cta">
-        <header>
-            <h2>You want to participate in 2018?</h2>
-        </header>
-        <footer>
-            <ul class="buttons">
-                <li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=4ts6GXRkQ0aPnQxXP4w3v7J9lzUCfztMhYvqprZ5v5NUQk8wOVk2RUtQWDgyRFpVVUJFTlU3Sk5YQiQlQCN0PWcu" target="_blank" class="button special">Register now</a></li>
-            </ul>
-        </footer>
+        @if (isBeforeContest)
+        {
+            <header>
+                <h2>You want to participate in @Model.Contest.Year?</h2>
+            </header>
+            <footer>
+                <ul class="buttons">
+                    @if (Model.Contest.RegistrationUrl != null)
+                    {
+                        <li><a href="@Model.Contest.RegistrationUrl" target="_blank" class="button special">Register now</a></li>
+                    }
+                    else
+                    {
+                        <li><span class="button disabled">Registrations have not yet opened</span></li>
+                    }
+                </ul>
+            </footer>
+            <p>
+                You can also attend the Kickoff event and enter spontaneously.
+            </p>
+        }
+        else
+        {
+            // TODO
+        }
         <p>
-            You can also attend the Kickoff event and enter spontaneously.
-        </p>
-        <p>
-            You have some questions first? Just write a mail to <a href="mailto:grow@pioniergarage.de" style="color: white; font-weight: bold;">gro<span>w@p</span>ioniergarage.de</a>
+            You have some questions? Just write a mail to <a href="mailto:grow@pioniergarage.de" style="color: white; font-weight: bold;">gro<span>w@p</span>ioniergarage.de</a>
         </p>
     </section>
 
     <section id="divider" class="container special style1 wrapper">
         &nbsp;
+    </section>
+
+    <section class="wrapper style1 container special">
+        <div class="row">
+            @foreach (var evnt in Model.MainEvents.OrderBy(e => e.Start))
+            {
+                <div class="4u 12u(narrower)">
+                    <section>
+                        <img src="/img/icon/eventdate.png" alt="@evnt.Name" class="fitHalf" />
+                        <header>
+                            <h2>@evnt.Start.ToString("MMM dd")</h2>
+                            <h3 style="text-decoration: underline">@Html.ActionLink(evnt.Name, "Program", "Home", null, null, evnt.Name.Replace(" ", String.Empty).ToLower(), null, null)</h3>
+                        </header>
+                        <p style="text-align: justify">
+                            @evnt.Description.DynamicSubstring(250, new[] { '.' })
+                        </p>
+                        <p>
+                            @Html.ActionLink("More info", "Program", "Home", null, null, evnt.Name.Replace(" ", String.Empty).ToLower(), null, null)
+                        </p>
+                    </section>
+                </div>
+            }
+        </div>
     </section>
 
     <section class="wrapper style2 container special">
@@ -81,62 +146,6 @@
             <strong>4. GROW is not for profit</strong><br />
             GROW is organized by the student-run association <a href="pioniergarage.de" style="color: white; font-weight: bold">PionierGarage e.V.</a> Our first and foremost goal is to inspire students to found their own ventures, which is why GROW is financed completely by donations.
         </p>
-    </section>
-
-    <section class="wrapper style1 container special">
-        <div class="row">
-            <div class="4u 12u(narrower)">
-
-                <section>
-                    <img src="/img/icon/bright-lightbulb.png" alt="10-Wochen" class="fitHalf" />
-                    <header>
-                        <h2>Nov. 12th</h2>
-                        <h3><a href="Programm.html#kickoff" style="text-decoration: underline">GROW Kickoff</a></h3>
-                    </header>
-                    <p>
-                        The kickoff is where the fun starts, no matter whether you have already applied or whether you're still undecided. We will present everything you need to know about the contest and give you a chance to find an idea and/or teammates. And the 11 weeks of work will start right away.
-                    </p>
-                    <p>
-                        <a href="Programm.html#kickoff">More info</a>
-                    </p>
-                </section>
-
-            </div>
-            <div class="4u 12u(narrower)">
-
-                <section>
-                    <img src="/img/icon/funnel.png" alt="10-Wochen" class="fitHalf" />
-                    <header>
-                        <h2>Dec. 19th</h2>
-                        <h3><a href="Programm.html#midterm" style="text-decoration: underline">GROW Midterm</a></h3>
-                    </header>
-                    <p>
-                        All teams come together and present their results after the first 5 weeks. This is your first chance to impress the jury since not everyone will be able to reach the final. Also, the pitches will be public and everyone is invited to check in on the progress so far.
-                    </p>
-                    <p>
-                        <a href="Programm.html#midterm">More info</a>
-                    </p>
-                </section>
-
-            </div>
-            <div class="4u 12u(narrower)">
-
-                <section>
-                    <img src="/img/icon/first-place-medal.png" alt="10-Wochen" class="fitHalf" />
-                    <header>
-                        <h2>Jan. 30th</h2>
-                        <h3><a href="Programm.html#final" style="text-decoration: underline">GROW Final</a></h3>
-                    </header>
-                    <p>
-                        After 11 weeks of hard work its finally time to come together and present the fruits of your labor. Pitch your results in front of the jury and over 500 visitors in the grand finale. Prices include funds to kick off your project as well as office spaces to work on your idea in peace.
-                    </p>
-                    <p>
-                        <a href="Programm.html#final">More info</a>
-                    </p>
-                </section>
-
-            </div>
-        </div>
     </section>
 
     <section class="wrapper style3 container special">
@@ -171,11 +180,20 @@
             <h2>Made possible thanks to</h2>
         </header>
         <div class="row logos">
-            @foreach (var partner in Model)
+            @foreach (var partner in Model.Partners)
             {
-                <div class="3u 6u(narrower)">
-                    <img src="@partner.Image.Url" />
-                </div>
+                if (partner.Image != null)
+                {
+                    <div class="3u 6u(narrower)">
+                        <img src="@partner.Image.Url" />
+                    </div>
+                }
+                else
+                {
+                    <div class="3u 6u(narrower)">
+                        <h3>@partner.Name</h3>
+                    </div>
+                }
             }
         </div>
     </section>
