--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -1,5 +1,6 @@
 ﻿@import url("/css/font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700,200");
 /*! IMPORTANT! DO NOT EDIT THE CSS FILE, BUT THE SCSS ONE. OR YOUR CHANGES WILL BE OVERWRITTEN! */
 /* Small Design fixes */
 input[type=checkbox] {
