--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -1,10 +1,10 @@
 @import url("/css/font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700,200");
 
 /*! IMPORTANT! DO NOT EDIT THE CSS FILE, BUT THE SCSS ONE. OR YOUR CHANGES WILL BE OVERWRITTEN! */
 
 /* Small Design fixes */
-
 input[type=checkbox] {
     transform: scale(1.5);
     margin: 3px;
